Formatted postman collection, Changed the token format, Changed the transaction status to enum
